# snomed-ct-entity-linking

./: LICENSE  README.md
1st Place/: LICENSE  Makefile  README.md  download_medical_abbreviations.sh  requirements.txt
1st Place/src/: make_inference_env.py  mimic_common.py  mimic_dev_main.py  mimic_postprocess_attributes.py  mimic_predict.py  mimic_submission_main.py  mimic_train.py  note_scoring.py  process_data.py  scoring.py
2nd Place/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
2nd Place/configs/: snom.yaml
2nd Place/docker/: Dockerfile
2nd Place/src/: cut_headers.py  data.py  embeds.py  main.py  model.py  preprocess.py  snomed_graph.py  static_dict.py  train.py
2nd Place/submission/: first_stage.py  first_stage_postprocess.py  infer.py  iou.py  main.py  model.py  second_stage.py  second_stage_postprocess.py  static_dict.py
3rd Place/: Finetuning-Classification.py  Finetuning-Entity-Recognition.py  LICENSE  README.md  faiss_classification_data_preparation.py  faiss_db_preparation.py  main.py  process_data.py  remove-add-lists.py  requirements_snomed.yml  train.sh
3rd Place/assets/prompts/: prompt.txt  prompt_classification_v1.txt  prompt_classification_v1_train.txt
3rd Place/src/: config.py  document.py  lora_merge.py  metrics.py  scoring.py  snomedctentitylinking.py  vectorDB.py
3rd Place/src/model/: vLLM.py
